<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Happy Sad</string>
    <string name="happysad_name">How are you feeling?</string>
   	<string name="im_happy">Im Happy</string>
	<string name="im_sad">Im Sad</string>
	<string name="more_name">More!</string>
	<string name="more_hint_text">Why?</string>
    <string name="submit_to_dash">Submit</string>
	<string name ="dashboard_name">Dashboard</string>
	<string name="update_name">Update</string>
	<string name="history_name">History</string>
	<string name="global_name">Global</string>
	<string name="fmh_name">Find Me Happiness</string>
	<string name="exit_name">Exit</string>
	<string name="chart_name">Chart</string>
	<string name="globavg_name">Global Avg</string>
	<string name="settings_label">Settings</string>
	<string name="settings_title">Happy Sad Settings</string>
	<string name="exit_label">Exit</string>	
	<string name="empty">No events!</string>
	<string name="personalMap">Personal Map</string>
	<string name="globalMap">Everybodys Map</string>
	<string name="refresh_name">Refresh</string>
	<string name="happy_overlay">Why worry?</string>
	<string name="sad_overlay">Show me happy!</string>
	<string name="switch_view">Switch View</string>
	<string name="blank"></string>
	<string name="share">Share</string>
	
	<string name="add_values">Add values to the chart</string>    
	<string name="x">X</string>    
	<string name="y">Y</string>
	<string name="add">Add</string>
	<string name="new_series">New series</string>
	
	<string name="login_message">User Account: </string>
	<string name="login_message_title">Your Logged In!</string>
    <string name="error_login_message">We seemed to have a problem logging you in. go into settings, accounts and log into your Gmail account</string>
</resources>

